[gd_scene load_steps=4 format=3 uid="uid://bfs1ttxw41636"]

[ext_resource type="Script" path="res://assets/Scenes/Snake/body.gd" id="1_u48s8"]
[ext_resource type="SpriteFrames" uid="uid://dlwgnkndplac0" path="res://assets/sprites/snake_body_anim.tres" id="2_xy2x3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_igmjb"]
size = Vector2(62, 62)

[node name="Body" type="Area2D"]
process_priority = 2
process_physics_priority = 2
script = ExtResource("1_u48s8")

[node name="BodyCol" type="CollisionShape2D" parent="." groups=["SnakePart"]]
shape = SubResource("RectangleShape2D_igmjb")

[node name="BodySprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_xy2x3")
animation = &"Horizontal"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
